lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:4: error: type mismatch;
 found   : Double
 required: Int
	y=getY();
              ^